[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ISS"
version = "0.0.1"
authors = [
  { name="Lanny", email="lan.rogers.book@gmail.com" },
]
description = "Oldschool forum software"
readme = "docs/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lanny/ISS"
"Bug Tracker" = "https://github.com/Lanny/ISS/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"ISS.static" = ["**/*"]
